fixed token info on tracker not swapping to dark mode sometimes

--- a/public/css/themes/dark.css
+++ b/public/css/themes/dark.css
@@ -4,6 +4,7 @@
     --body-color: #E1E1E1;
 
     --default-gradient: linear-gradient(-90deg,#5e72e4,#825ee4 70%);
+    --default-gradient-dark: linear-gradient(-90deg,#5464be,#6c50bb 70%);
 
     /* nav and header */
     --nav-background: var(--default-gradient);
